test/files/pos/t7232c/Test.scala
// scalac: -Xfatal-warnings
object Test {
  import pack._
  Foo.innerList().isInnerList()
}
