test/files/neg/t10752/Test_2.scala
// scalac: -Xfatal-warnings -deprecation
object Test {
  def useC = p1.DeprecatedClass.foo
  def useM = p1.DeprecatedMethod.foo
}
